tools/tests/errors/surf_cls_06.experr
'C' object is not callable
